--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,32 @@
-/* CSS3 Homework week 1*/
+/* CSS3 Homework week 1 6-24-2025*/
 
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 90%
-    % ;
+    font-size: 85%
+     ;
 }
 
-header {background-color: mistyrose;
+header {background-color: #ffe4e1;
+
 }
 
-nav {background-color: pink;
+nav {background-color: #ffc0cb;
     text-align: center;
 }
 
-main {background-color: cornsilk;
-    font-size: 105%;
+main {background-color: #fff8dc;
+    font-size: 120%;
 }
 
-footer {background-color: pink;}
+footer {background-color: #fcacba;}
 
-li {display: inline ;
-    width: fit-content;
+li {display: inline-flex;
+    width: 20cap;
 }
 
 h1 {text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: saddlebrown;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #8b4513;
 }
 
-p {line-height: 1.5;}
+p {line-height: 135%;}
